# gemini_client_rust

./: Cargo.toml  README.md
src/: lib.rs
