[package]
name = "gemini_client_rust"
version = "0.1.0"
authors = ["Jerjes Aguirre <jerjesaguirre@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Rust client for interacting with Google's Gemini API. Tailored only for a single type of query at this point"
repository = "https://github.com/Jerjes0/gemini_client_rust"
readme = "README.md"
keywords = ["gemini", "google", "api", "rust"]
categories = ["web-programming", "api-bindings", "data-processing"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
