[package]
name = "gemini_client_rust"
version = "0.1.4"
authors = ["Jerjes Aguirre <jerjesaguirre@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Rust client for interacting with Google's Gemini API. Tailored only for a single type of query at this point"
repository = "https://github.com/Jerjes0/gemini_client_rust"
readme = "README.md"
keywords = ["gemini", "google", "api", "rust"]
categories = ["web-programming", "api-bindings"]

[dependencies]
gloo-net = "0.4"  
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2.95" 
wasm-bindgen-futures = "0.4" 
web-sys = { version = "0.3.64", features = ["console"] }
gloo-utils = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
